# apprenticeship-otj-helper

./: .gitignore  CLAUDE.md  Procfile  README.md  TODO.md  pyproject.toml
docs/: user-guide.md
docs/extensions/: 01-llm-evidence-writing.md  01-llm-ksb-identification.md  02-rest-api-layer.md  03-realtime-sse.md  04-calendar-integration.md  05-background-task-queue.md  06-pdf-portfolio.md  07-mentor-review-workflow.md  08-file-uploads.md  09-activity-templates-recurrence.md  10-advanced-data-viz.md  11-smart-ksb-recommendations.md  12-audit-log-versioning.md
scripts/: pre-deploy-check.sh
src/otj_helper/: __init__.py  app.py  auth.py  cli.py  ksb_data.py  models.py  recommendations.py  specs_data.py  sse.py  storage.py
src/otj_helper/routes/: activities.py  auth.py  dashboard.py  events.py  health.py  ksbs.py  landing.py  recommendations.py  tags.py  templates.py  uploads.py
src/otj_helper/tasks/: __init__.py  recurrence.py
src/otj_helper/templates/: base.html  dashboard.html  landing.html
src/otj_helper/templates/activities/: detail.html  form.html  list.html
src/otj_helper/templates/auth/: denied.html  login.html
src/otj_helper/templates/ksbs/: detail.html  list.html
src/otj_helper/templates/recommendations/: index.html
src/otj_helper/templates/tags/: list.html
src/otj_helper/templates/templates/: form.html  list.html
tests/: conftest.py  test_env_validation.py  test_recommendations.py  test_smoke.py  test_sse.py  test_templates.py  test_uploads.py
