[project]
name = "otj-helper"
version = "0.1.0"
description = "Off-the-job training tracker for the Systems Thinking Practitioner L7 apprenticeship"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "authlib>=1.3",
    "requests>=2.31",
    "gunicorn>=22.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
otj-helper = "otj_helper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otj_helper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
